Add readme ja Ttidy up html

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/layout.css">
   <!-- JS -->
-  <script src="./assets/js/device.js"></script>
+  <script src="./device.js"></script>
 </head>
 
 <body>
   <div id="content">
-    <div id="onlyPc" class="only-pc js-device">
+    <div id="onlyPc" class="only-pc">
       This display only PC.
     </div>
-    <div id="onlySp" class="only-sp js-device">
+    <div id="onlySp" class="only-sp">
       This display only SP.
     </div>
   </div>
