--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
   <!-- CSS -->
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/layout.css">
-  <!-- JS -->
-  <script src="./device.js"></script>
 </head>
 
 <body>
+  <!-- Load device.js -->
+  <script src="./device.js"></script>
+  <!-- / Load device.js -->
   <div id="content">
     <div id="onlyPc" class="only-pc">
       This display only PC.
