Change plugin insert place.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
   <!-- Load device.js -->
-  <script src="./device.js"></script>
+  <script src="./device.min.js"></script>
   <!-- / Load device.js -->
   <div id="content">
     <div id="onlyPc" class="only-pc">
