Change sample html.

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   <!-- / Load device.js -->
   <div id="content">
     <div id="onlyPc" class="only-pc">
-      This display only PC.
+      This text display on only PC.
     </div>
     <div id="onlySp" class="only-sp">
-      This display only SP.
+      This text display on only smartphone.
     </div>
   </div>
 </body>
