Divided tablet check.

--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
   <script src="./device.min.js"></script>
   <!-- / Load device.js -->
   <div id="content">
-    <div id="onlyPc" class="only-pc">
-      This text display on only PC.
-    </div>
     <div id="onlySp" class="only-sp">
       This text display on only smartphone.
+    </div>
+    <div id="onlyTab" class="only-tab">
+      This text display on only tablet.
+    </div>
+    <div id="onlyPc" class="only-pc">
+      This text display on only PC.
     </div>
   </div>
 </body>
